// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders correctly with headers and content 1`] = `
Array [
  <div
    className="sc-1e38spu-0 iYdRdP"
  >
    <div
      className="sc-1e38spu-0 jvdnaf"
      onClick={[Function]}
    >
      One
    </div>
    <div
      className="sc-1e38spu-0 jvdnaf"
      onClick={[Function]}
    >
      Two
    </div>
    <div
      className="sc-1e38spu-0 jvdnaf"
      onClick={[Function]}
    >
      Three
    </div>
    <div
      className="sc-1e38spu-0 jvdnaf"
      onClick={[Function]}
    >
      Four
    </div>
  </div>,
  <div
    className="sc-1e38spu-0 jgIXau"
  />,
]
`;

exports[`Tabs renders correctly with only headers 1`] = `
<div
  className="sc-1e38spu-0 iYdRdP"
>
  <div
    className="sc-1e38spu-0 jvdnaf"
    onClick={[Function]}
  >
    One
  </div>
  <div
    className="sc-1e38spu-0 jvdnaf"
    onClick={[Function]}
  >
    Two
  </div>
  <div
    className="sc-1e38spu-0 jvdnaf"
    onClick={[Function]}
  >
    Three
  </div>
  <div
    className="sc-1e38spu-0 jvdnaf"
    onClick={[Function]}
  >
    Four
  </div>
</div>
`;
